# LinkedIn-MCP

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
data/: form_mapping.example.json  user_profile.example.json
docs/: ARCHITECTURE.md
linkedin_mcp/: config.py  mcp_server.py  types.py
linkedin_mcp/documents/: builder.py
linkedin_mcp/generation/: llm.py  schema.py
linkedin_mcp/linkedin/: client.py
linkedin_mcp/prompts/: generation.py
linkedin_mcp/services/: orchestrator.py
linkedin_mcp/utils/: logging.py  slugify.py
src/: linkedin_mcp_server.py
templates/: connection_message.txt  cover_letter.txt
tests/: test_linkedin_mcp.py
