[project]
name = "linkedin-mcp"
version = "0.1.0"
description = "Python MCP server that automates LinkedIn Easy Apply with tailored document generation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "LinkedIn MCP" }
]
dependencies = [
  "mcp>=1.14.0",
  "playwright>=1.44.0",
  "openai>=1.23.0",
  "anthropic>=0.29.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "reportlab>=4.1.0"
]

[project.optional-dependencies]
azure = ["httpx>=0.27.0"]

[project.scripts]
linkedin-mcp = "linkedin_mcp.mcp_server:run"

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["linkedin_mcp*"]
